# Advanced_Programming_Assignments

Task_1/: CMakeLists.txt  DrawableGameComponent.cpp  DrawableGameComponent.h  Game.cpp  Game.h  GameComponent.cpp  GameComponent.h  main.cpp
Task_2/: CMakeLists.txt  Client.h  Comms.cpp  Comms.h  Server.cpp  Server.h  main.cpp
Task_2/Client-Project/: CMakeLists.txt  Client.cpp  Comms.cpp  Comms.h  main.cpp
Task_2/Client-Project/Exceptions/: AcceptSocketException.h  BindSocketException.h  CloseSocketException.h  CreateSocketException.h  ListenSocketException.h  ReceiveException.h  SetSocketOptionsException.h  StartChatException.h
Task_2/Exceptions/: BindSocketException.h  CreateSocketException.h  ListenSocketException.h  SetSocketOptionsException.h
Task_2/Server-Project/: CMakeLists.txt  Client.cpp  Client.h  Comms.cpp  Comms.h  Server.cpp  Server.h  main.cpp
Task_2/Server-Project/Exceptions/: AcceptSocketException.h  BindSocketException.h  CloseSocketException.h  ConnectSocketException.h  ExceptionWithMessage.h  ListenSocketException.h  ReceiveException.h  SendException.h  SetSocketOptionsException.h  StartChatException.h
