add_executable(Task_2-server main.cpp Server.cpp Server.h Client.cpp Client.h Comms.cpp Comms.h Exceptions/CreateSocketException.h Exceptions/SetSocketOptionsException.h Exceptions/BindSocketException.h Exceptions/ListenSocketException.h Exceptions/AcceptSocketException.h Exceptions/ConnectSocketException.h Exceptions/SendException.h Exceptions/CloseSocketException.h Exceptions/ReceiveException.h Exceptions/StartChatException.h Exceptions/ExceptionWithMessage.h)
add_executable(Task_2-client main.cpp Server.cpp Server.h Client.cpp Client.h Comms.cpp Comms.h Exceptions/CreateSocketException.h Exceptions/SetSocketOptionsException.h Exceptions/BindSocketException.h Exceptions/ListenSocketException.h Exceptions/AcceptSocketException.h Exceptions/ConnectSocketException.h Exceptions/SendException.h Exceptions/CloseSocketException.h Exceptions/ReceiveException.h Exceptions/StartChatException.h Exceptions/ExceptionWithMessage.h)